--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,6 @@ rustls-tls = ["reqwest/rustls-tls"]
 spec = []
 
 [dependencies]
-chrono = { version = "0.4", default-features = false, features = [
-    "clock",
-    "serde",
-    "std",
-    "wasmbind",
-] }
-
 http = "1"
 reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }
 
@@ -30,6 +23,8 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_urlencoded = "0.7"
 serde_with = "3.14"
+
+strum_macros = "0.27"
 
 thiserror = "2"
 typed-builder = "0.21"
